# ocl_openbabel

./: .cproject  .gitignore  .project  CMakeLists.txt
cmake/modules/: FindOpenCL.cmake  FindOpenCLMultiArch.cmake
dataset/: 1FM9_lig.sdf  1FM9_pep.sdf  1FM9_pro.sdf  bostrom.sdf  forcefield.sdf  one_molecule.sdf
doc/: FAQ.html  OBTwoMigration.html
doc/API/html/: classOpenBabel_1_1XMLConversion-members.shtml
include/openbabel/: .gitignore  benchmark-utils.hpp  forcefield.h  locale.h  mapkeys.h  plugin.h
kernels/: .gitignore  CMakeLists.txt  electrostatic_forces_kernel.cl  simple_kernel.cl  vdw_forces_kernel.cl
parallel/: .gitignore  CMakeLists.txt  MMFF94_dative.mol2  MMFF94_hypervalent.mol2  confab_mmff94.cpp  obminimize_mmff94.cpp  validate_mmff94.cpp
part1/: .gitignore  CMakeLists.txt  cll.cpp  eigen-with-viennacl.cpp  obconformerx.cpp  obenergyx.cpp  obminimizex.cpp
src/: CMakeLists.txt  mapkeys.cpp  plugin.cpp
src/forcefields/: cll.cpp  cll.h  electrostaticForces.cpp  forcefieldmmff94.cpp  forcefieldmmff94.h  forcefieldmmff94eigen.cpp  forcefieldmmff94eigen.h  forcefieldmmff94eigen2.cpp  forcefieldmmff94gpu.cpp  forcefieldmmff94gpu.h  forcefieldmmff94gpu_queueing.cpp  forcefieldmmff94ocl.cpp  openclmmff94.cpp  openclmmff94.h  util.cpp
test/: .gitignore
